tests/NormalTests/paczka1/fuzzy1/83134894.err
Error in line 6: A20 A887 11,1
Error in line 8: A20 A198 13,2
Error in line 12: PgtfGDgDu A887 84,2
Error in line 10: A1vZDw1j7 A887 3,8
Error in line 15: A1vZDw1j7 A512 83,9
Error in line 33: MdJ A20 36,0
